layout do meu adapter

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.vania.alura_agenda">
 
     <uses-permission android:name="android.permission.CALL_PHONE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -20,8 +21,7 @@
         </activity>
         <activity
             android:name=".FormularioActivity"
-            android:label="@string/title_activity_formulario">
-    </activity>
+            android:label="@string/title_activity_formulario" />
     </application>
 
 </manifest>
