--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,5 +29,6 @@ dependencies {
     compile "com.android.support:appcompat-v7:$AndroidSuport"
     compile "com.android.support:design:$AndroidSuport"
     compile "de.hdodenhof:circleimageview:$CircleImageView"
-    compile 'com.android.support:cardview-v7:24.0.+'
+    compile 'com.android.support:cardview-v7:24.2.1'
+    compile 'com.android.support:support-v4:24.2.1'
 }
