--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,4 +31,6 @@ dependencies {
     compile "de.hdodenhof:circleimageview:$CircleImageView"
     compile 'com.android.support:cardview-v7:24.2.1'
     compile 'com.android.support:support-v4:24.2.1'
+    compile 'com.google.android.gms:play-services:9.8.0'
+    compile 'com.android.support:appcompat-v7:24.2.1'
 }
